--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background: rgb(117, 201, 117);
+    width: 100%;
+    min-height: 100vh;
+    background: rgb(2,0,36);
+    background: linear-gradient(315deg, rgba(2,0,36,1) 0%, rgba(29,29,143,1) 35%, rgba(0,212,255,1) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
