--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,15 @@ body{
     background: rgb(2,0,36);
     background: linear-gradient(315deg, rgba(2,0,36,1) 0%, rgba(29,29,143,1) 35%, rgba(0,212,255,1) 100%);
     display: flex;
+    /*
+    Запрет пользователю выделять текст:
+    user-select: none; 
+    */
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE/Edge */
+
     justify-content: center;
     align-items: center;
     font-family: 'Rubik', sans-serif;
