--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,24 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body{
-    width: 100%;
-    min-height: 100vh;
-    background: rgb(2,0,36);
-    background: linear-gradient(315deg, rgba(2,0,36,1) 0%, rgba(29,29,143,1) 35%, rgba(0,212,255,1) 100%);
-    display: flex;
-    /*
-    Запрет пользователю выделять текст:
-    user-select: none; 
-    */
-    user-select: none;
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE/Edge */
-    
-    justify-content: center;
-    align-items: center;
-    font-family: 'Rubik', sans-serif;
+  width: 100%;
+  min-height: 100vh;
+  background: rgb(56,182,184);
+  background: linear-gradient(75deg, rgba(56,182,184,1) 0%, rgba(45,253,184,1) 100%);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  user-select: none;
 }
